@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-05-08T08:16:31Z",
+  "timestamp" : "2022-05-08T16:17:36Z",
   "count_outdated" : 16,
   "uniques_outdated" : 10,
-  "count" : 76,
-  "uniques" : 47,
+  "count" : 81,
+  "uniques" : 49,
   "clones" : [
     {
       "timestamp": "2022-04-25T00:00:00Z",
@@ -49,10 +49,10 @@
     },
     {
       "timestamp": "2022-05-08T00:00:00Z",
-      "count": 17,
-      "count_minmax": [ 17, 17 ],
-      "uniques": 8,
-      "uniques_minmax": [ 8, 8 ]
+      "count": 22,
+      "count_minmax": [ 17, 22 ],
+      "uniques": 10,
+      "uniques_minmax": [ 8, 10 ]
     }
   ]
 }
