@@ -1,5 +1,5 @@
 {
-  "count": 60,
+  "count": 65,
   "uniques": 17,
   "clones": [
     {
@@ -34,8 +34,8 @@
     },
     {
       "timestamp": "2022-05-08T00:00:00Z",
-      "count": 17,
-      "uniques": 8
+      "count": 22,
+      "uniques": 10
     }
   ]
 }
