@@ -1,3 +1,9 @@
+2022-05-08T16:17:36Z:
+* notice: last 14d: all unq: 65 17
+* notice: prev accum: outdated-all outdated-unq / all unq: 16 10 / 76 47
+* notice: next accum: outdated-all outdated-unq / all unq: 16 10 / 81 49
+* notice: prev json diff // prev day diff: unq all: +2 +5 / -0 -0 // +10 +22 / -0 -0
+
 2022-05-08T08:16:31Z:
 * notice: last 14d: all unq: 60 17
 * notice: prev accum: outdated-all outdated-unq / all unq: 16 10 / 59 39
